# matrix

./: .deploy.sh  .travis.yml  CMakeLists.txt  README.md
lib/: CMakeLists.txt  lib.hpp
pkg/: CMakeLists.txt
src/: CMakeLists.txt  matrix.cpp
tst/: CMakeLists.txt  test_matrix.hpp  test_matrix1.cpp  test_matrix10.cpp  test_matrix100.cpp  test_matrix2.cpp  test_matrix20.cpp  test_matrix200.cpp  test_matrix5.cpp  test_matrix50.cpp
