cmake_minimum_required (VERSION 3.12)

# Project stuff
project (matrix_src
	VERSION 0.0.${TRAVIS_BUILD_NUMBER}
	DESCRIPTION "Homework 6 sparse matrix implementation program"
	HOMEPAGE_URL "https://github.com/edwdmkrv/matrix/tree/master/src"
	LANGUAGES CXX
)

# Program stuff
add_executable (matrix matrix.cpp)

set_target_properties (matrix PROPERTIES
	CXX_STANDARD 17
	CXX_EXTENSIONS OFF
	CXX_STANDARD_REQUIRED ON
	COMPILE_OPTIONS "-pedantic;-Wall;-Wextra"
	LINK_LIBRARIES "lib;${CMAKE_THREAD_LIBS_INIT}"
)

install (TARGETS matrix RUNTIME DESTINATION Debug/bin CONFIGURATIONS Debug)
install (TARGETS matrix RUNTIME DESTINATION bin CONFIGURATIONS Release)
